--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "add": "^2.0.6",
