--- a/package.json
+++ b/package.json
@@ -30,17 +30,21 @@
     "@nextui-org/theme": "^2.2.9",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "separator": "^0.1.0",
