--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
+    "react-countdown": "^2.3.6",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
