--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-share": "^5.1.0",
     "separator": "^0.1.0",
     "shadcn": "^2.0.7",
     "tailwind-merge": "^2.5.1",
